<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/section_padding"
        android:paddingEnd="@dimen/section_padding"
        android:paddingTop="@dimen/space_xxl"
        android:paddingBottom="@dimen/space_xl">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_recipe_title"
            style="@style/RecipeTextScreenTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xxl"
            android:text="@string/label_title"
            style="@style/RecipeTextFieldLabel" />

        <EditText
            android:id="@+id/etEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:hint="@string/hint_title"
            style="@style/RecipeEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/label_category"
            style="@style/RecipeTextFieldLabel" />

        <EditText
            android:id="@+id/etEditCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:hint="@string/hint_category"
            style="@style/RecipeEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/label_ingredients"
            style="@style/RecipeTextFieldLabel" />

        <EditText
            android:id="@+id/etEditIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:gravity="top"
            android:hint="@string/hint_ingredients"
            android:minLines="4"
            style="@style/RecipeEditText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_md"
            android:text="@string/label_instructions"
            style="@style/RecipeTextFieldLabel" />

        <EditText
            android:id="@+id/etEditInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:gravity="top"
            android:hint="@string/hint_instructions"
            android:minLines="5"
            style="@style/RecipeEditText" />

        <Button
            android:id="@+id/btnUpdateRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/action_save_changes"
            style="@style/RecipeButtonPrimary" />

    </LinearLayout>

</ScrollView>
