<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingStart="@dimen/screen_padding_horizontal"
    android:paddingEnd="@dimen/screen_padding_horizontal">

    <TextView
        android:id="@+id/tvOverline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:text="@string/recipe_list_overline"
        style="@style/RecipeTextOverline"
        app:layout_constraintEnd_toStartOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/recipe_list_title"
        style="@style/RecipeTextScreenTitle"
        app:layout_constraintEnd_toStartOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOverline" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xxl"
        android:text="@string/action_logout"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="@dimen/space_sm"
        android:paddingEnd="@dimen/space_sm"
        style="@style/RecipeButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSearchRecipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:hint="@string/hint_search"
        android:inputType="text"
        android:singleLine="true"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/space_xs"
        android:drawableTint="@color/secondary_ink"
        style="@style/RecipeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_sm"
        android:background="@drawable/bg_editorial_input"
        android:minHeight="@dimen/touch_target_min"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearchRecipe" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecipes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_sm"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />

    <!-- Empty state, shown/hidden by RecipeListActivity -->
    <LinearLayout
        android:id="@+id/emptyState"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/recyclerViewRecipes"
        app:layout_constraintEnd_toEndOf="@id/recyclerViewRecipes"
        app:layout_constraintStart_toStartOf="@id/recyclerViewRecipes"
        app:layout_constraintTop_toTopOf="@id/recyclerViewRecipes">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_state_title"
            style="@style/RecipeTextSectionTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xs"
            android:gravity="center"
            android:text="@string/empty_state_subtitle"
            style="@style/RecipeTextSubtitle" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_md"
        android:contentDescription="@string/cd_add_recipe"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/accent"
        app:tint="@color/white"
        app:elevation="2dp"
        app:pressedTranslationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
